# asylo

./: .bazelrc  AUTHORS  Doxyfile  INSTALL.md  LICENSE  README.md  WORKSPACE
asylo/: BUILD  SECURITY.md  client.h  enclave.proto  enclave_manager.h  public_protos.manifest  secure_storage.h  trusted_application.h
asylo/bazel/: BUILD  asylo.bzl  asylo_copy_from_host.bzl  asylo_deps.bzl  asylo_internal.bzl  asylo_transitions.bzl  copts.bzl  dlopen_enclave.bzl  embed_enclaves_test.sh  embed_enclaves_test_binary.cc  enclave_runner.cc  enclave_test_shim.cc  enclave_test_shim.proto  gtest_test.cc  installation_path.bzl  java_deps.bzl  patch_repository.bzl  proto.bzl  remote_deps.bzl  sgx_deps.bzl  sgx_rules.bzl  sim_enclave.bzl  test_shim_enclave.cc  test_shim_enclave.proto  test_shim_loader.cc
asylo/crypto/: BUILD  aead_cryptor.cc  aead_cryptor.h  aead_cryptor_test.cc  aead_key.cc  aead_key.h  aead_key_test.cc  aead_test_vector.cc  aead_test_vector.h  aes_gcm_key.cc  aes_gcm_key.h  aes_gcm_key_test.cc  aes_gcm_siv.cc  aes_gcm_siv.h  asn1.cc  (+71 more)
asylo/platform/primitives/fortanix_edp/edp_runner/: BUILD  Cargo.toml
asylo/platform/primitives/fortanix_edp/edp_runner/src/: crypto.rs  lib.rs
asylo/rust-asylo/: Cargo.toml  README.md  build.rs
asylo/rust-asylo/proto/asylo/: enclave.proto
asylo/rust-asylo/proto/asylo/identity/: enclave_assertion_authority_config.proto  identity.proto
asylo/rust-asylo/proto/asylo/util/: status.proto
asylo/rust-asylo/src/: error.rs  extent.rs  lib.rs  proto.rs  runtime.rs
buildkite/: collect_artifacts.py  docker-test.sh  pipeline.yml
(+1659 files in other folders)
